[package]
name = "nornir"
version = "0.1.0"
authors = ["Hilmar Gústafsson <hilmargustafs@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smol = "^0.1"
blocking = "^0.4"
swayipc = { version = "^2.6", features = ["async", "event_stream"] }
async-std = "1.5.0"
